adding new tasks and parameterizing hibernate file config